UPDATE : New variables for elasticsearch operations

--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,8 @@
 access_token =
 
 [elasticsearch]
-cloud_id =
+end_point =
 username =
-password = 
+password =
+index_name =
+doc_columns = File Name, File Text, Date Modified, Shareable Link, File Path
