CHANGE : doc column names configuration

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,19 @@
 ## Configuration file for the API
 
+## For Dropbox
 [dropbox]
-access_token =
+access_token = 50Q3hyB-hekAAAAAAAAAAWe5uMp6a-x8SW8BDpg-3JVJyiisEQd4ftkt-wWFTZxP
 
+
+## For Elastic Search
 [elasticsearch]
-end_point =
-username =
-password =
-index_name =
-doc_columns = File Name, File Text, Date Modified, Shareable Link, File Path
+end_point = https://i-o-optimized-deployment-e3e131.es.eastus2.azure.elastic-cloud.com:9243
+username = elastic
+password = FMWkrUxpW6gzVawicyKEi3tQ
+index_name = dropbox_data
+
+## IMPORTANT :
+## DO NOT CHANGE UPPERCASE WORDS or DOUBLE QUOTES
+## DO NOT CHANGE THE LINES
+## Kindly change the values for <lower case words> within double quotes to desired doc attributes of elastic search
+doc_columns = {"FILE_NAME" : "<name of file>", "FILE_TEXT" : "<text extracted from file>", "DATE_MODIFIED" : "<date of modification of file on server>", "SHAREABLE_LINK" : "<link to access file>", "FILE_PATH" : "<path of file on dropbox>"}
