Removing mistakenly uploaded credentials

--- a/config.ini
+++ b/config.ini
@@ -2,15 +2,15 @@
 
 ## For Dropbox
 [dropbox]
-access_token = 50Q3hyB-hekAAAAAAAAAAWe5uMp6a-x8SW8BDpg-3JVJyiisEQd4ftkt-wWFTZxP
+access_token = 
 
 
 ## For Elastic Search
 [elasticsearch]
-end_point = https://i-o-optimized-deployment-e3e131.es.eastus2.azure.elastic-cloud.com:9243
-username = elastic
-password = FMWkrUxpW6gzVawicyKEi3tQ
-index_name = dropbox_data
+end_point = 
+username = 
+password = 
+index_name = 
 
 ## IMPORTANT :
 ## DO NOT CHANGE UPPERCASE WORDS or DOUBLE QUOTES
