UPDATE : configuration for periodic interval of synchronization

--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,21 @@
 ## Configuration file for the API
 
+## For Synchronizing interval
+[interval]
+minutes =
+
 ## For Dropbox
 [dropbox]
-access_token = 
+access_token =
 
 
 ## For Elastic Search
 [elasticsearch]
-end_point = 
-username = 
-password = 
-index_name = 
+end_point =
+username =
+password =
+index_name =
+
 
 ## IMPORTANT :
 ## DO NOT CHANGE UPPERCASE WORDS or DOUBLE QUOTES
